--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+optimizer = true
+optimizer_runs = 200
+ffi=true
 
 fs_permissions = [
   { access = "read",       path = "out" },
