--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,5 +36,5 @@ jobs:
 
       - name: Run Forge tests
         run: |
-          forge test -vvv --threads 1
+          bash scripts/run_all_scenarios.sh
         id: test
