--- a/foundry.toml
+++ b/foundry.toml
@@ -7,9 +7,10 @@ optimizer_runs = 200
 ffi=true
 
 fs_permissions = [
+  { access = "read",       path = "src" },
   { access = "read",       path = "out" },
   { access = "read-write", path = ".diamond-upgrades" },
-  { access = "read",       path = "src" }
+  { access = "read-write", path = "src/example/facets" }
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
