refactor(tests): bash +x

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
           forge build --sizes
         id: build
 
-      - name: Run Forge tests
+      - name: Run tests
         run: |
-          bash scripts/run_all_scenarios.sh
+          bash +x scripts/run_all_scenarios.sh
         id: test
